# fairly

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/features/benchmark/: api.ts  store.ts
frontend/src/features/benchmark/components/: BenchmarkSummary.tsx  DimensionToggles.tsx  EntitySelector.tsx  PromptPreview.tsx  RunBenchmarkButton.tsx  SamplingConfig.tsx  UseCasePicker.tsx
frontend/src/features/datasets/: api.ts
frontend/src/features/datasets/components/: DatasetList.tsx
frontend/src/features/evaluations/: api.ts
frontend/src/features/models/: api.ts
frontend/src/features/settings/: api.ts
frontend/src/pages/: BenchmarkPage.tsx  DashboardPage.tsx  DatasetsPage.tsx  EvaluationPage.tsx  ModelsPage.tsx  ResultsPage.tsx  SettingsPage.tsx
frontend/src/types/: index.ts
src/fairly/: __init__.py  cli.py  config.py  crypto.py
src/fairly/data/: __init__.py  loader.py  s3.py  schema.py
src/fairly/db/: __init__.py  crud_datasets.py  crud_evaluations.py  crud_models.py  crud_settings.py  database.py  models.py  seed.py
src/fairly/eval/: __init__.py  benchmarks.py  runner.py
src/fairly/models/: __init__.py  base.py  custom.py  featherless.py
src/fairly/reporting/: __init__.py  pdf.py
src/fairly/server/: __init__.py  app.py  routes_datasets.py  routes_evaluations.py  routes_models.py  routes_prompts.py  routes_settings.py  routes_stats.py
(+5 files in other folders)
